--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   margin: 0;
-  background-color: whitesmoke;
+  background-color: #f1eee2;
   scroll-snap-type: y mandatory;
 }
 
